Ant builder: Document that Cobertura is optional
Travis CI's output of "print-libs" task shows that Ant works fine if
Cobertura is not installed:
https://travis-ci.org/xor-freenet/plugin-WebOfTrust/builds/385692801

--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,7 @@
 	<!-- Unit test dependencies                                                                 -->
 	<property name="junit.location" value="/usr/share/java/junit4.jar"/>
 	<property name="hamcrest.location" value="/usr/share/java/hamcrest-core.jar"/>
+	<!-- Optional, only needed if using "ant -Dtest.coverage=true"                              -->
 	<property name="cobertura.location" value="/usr/share/java/cobertura.jar"/>
 	<!-- Minimum Java version which fred officially requires
 	   = Maximum version which WoT's code can use features of. -->
