--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,8 @@ before_install:
   - if [ ! -e fred/src ]; then git clone https://github.com/freenet/fred.git --branch next --single-branch --depth 1 fred ; else cd fred ; git pull ; cd .. ; fi
   - cd fred
   - echo -e "org.gradle.parallel = true\norg.gradle.jvmargs=-Xms256m -Xmx1024m\norg.gradle.configureondemand=true\ntasks.withType(Test) {\n maxParallelForks = Runtime.runtime.availableProcessors()\n}" > gradle.properties
+  # The gradlew binary which fred ships doesn't work on OpenJDK 7, need to use Travis' gradle there.
+  - if [ "$TRAVIS_JDK_VERSION" = "openjdk7" ] ; then rm ./gradlew && ln -s "$(which gradle)" ./gradlew ; fi
   # TODO: freenet.jar won't contain class Version if we don't run the
   # clean task in a separate execution of Gradle. Why?
   - ./gradlew clean
@@ -54,9 +56,9 @@ jdk:
   - oraclejdk9
   - oraclejdk8
   - openjdk8
+  - openjdk7
   # openjdk9: As of 2018-05-12 isn't available on Travis yet.
   # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
-  # openjdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/8503
 
 deploy:
   provider: script
