--- a/.travis.yml
+++ b/.travis.yml
@@ -33,10 +33,14 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
 
+# Get/update Freenet Git repository
 install:
   - cd "$TRAVIS_BUILD_DIR"/..
   - if [ ! -e fred ]; then git clone https://github.com/freenet/fred.git --branch next --single-branch --depth 1 fred ; else cd fred ; git pull ; cd .. ; fi
   - cd fred
+
+# Compile Freenet Git repository
+before_script:
   - echo -e "org.gradle.parallel = true\norg.gradle.jvmargs=-Xms256m -Xmx1024m\norg.gradle.configureondemand=true\ntasks.withType(Test) {\n maxParallelForks = Runtime.runtime.availableProcessors()\n}" > gradle.properties
   # The gradlew binary which fred ships doesn't work on OpenJDK 7, need to use Travis' gradle there.
   - if [ "$TRAVIS_JDK_VERSION" = "openjdk7" ] ; then rm ./gradlew && ln -s "$(which gradle)" ./gradlew ; fi
