Travis CI: Only recompile fred if there are new commits
Or if it wasn't compiled yet.

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,11 +36,18 @@ cache:
 # Get/update Freenet Git repository
 install:
   - cd "$TRAVIS_BUILD_DIR"/..
-  - if [ ! -e fred ]; then git clone https://github.com/freenet/fred.git --branch next --single-branch --depth 1 fred ; else cd fred ; git pull ; cd .. ; fi
+  - if [ ! -e fred ]; then FRED_UPDATED=1 ; git clone https://github.com/freenet/fred.git --branch next --single-branch --depth 1 fred ; fi
   - cd fred
+  - git fetch && if [ "$(git rev-parse @)" != "$(git rev-parse @{u})" ] ; then FRED_UPDATED=1 ; git pull ; else echo "No changes at fred, not recompiling." ; fi
+  - cd "$TRAVIS_BUILD_DIR"
+
+stages:
+  - name: before_script
+    if: env(FRED_UPDATED) = 1
 
 # Compile Freenet Git repository
 before_script:
+  - cd "$TRAVIS_BUILD_DIR"/../fred
   - echo -e "org.gradle.parallel = true\norg.gradle.jvmargs=-Xms256m -Xmx1024m\norg.gradle.configureondemand=true\ntasks.withType(Test) {\n maxParallelForks = Runtime.runtime.availableProcessors()\n}" > gradle.properties
   # The gradlew binary which fred ships doesn't work on OpenJDK 7, need to use Travis' gradle there.
   - if [ "$TRAVIS_JDK_VERSION" = "openjdk7" ] ; then rm ./gradlew && ln -s "$(which gradle)" ./gradlew ; fi
@@ -51,10 +58,12 @@ before_script:
   # needs - to build/output/
   - ./gradlew jar copyRuntimeLibs -x test
   - cd "$TRAVIS_BUILD_DIR"
-  # Print the checksums of the WoT dependencies - for debugging
-  - sha256sum ../fred/build/output/*
 
-script: ant
+# Compile and test WoT
+script:
+  - echo SHA256 of dependencies:
+  - sha256sum ../fred/build/output/*
+  - ant
 
 jdk:
   - oraclejdk9
