Travis CI: Fix syntax error
It would think that the line is a YAML thing, not a shell command, due
to it ending with ":".

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,8 +61,7 @@ before_script: |
 
 # Compile and test WoT
 script:
-  - echo SHA256 of dependencies:
-  - sha256sum ../fred/build/output/*
+  - echo 'Checksums of dependencies:' ; sha256sum ../fred/build/output/*
   - ant
 
 jdk:
