--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,8 @@ before_script: |
 # Compile and test WoT
 script:
   - echo 'Checksums of dependencies:' ; sha256sum ../fred/build/output/*
+  # Don't allow Travis to override the low memory limit we set in Ant with a higher one.
+  - unset _JAVA_OPTIONS
   - ant
 
 jdk:
