--- a/.travis.yml
+++ b/.travis.yml
@@ -75,9 +75,9 @@ script:
 jdk:
   - oraclejdk9
   - oraclejdk8
+  - openjdk9
   - openjdk8
   - openjdk7
-  # openjdk9: As of 2018-05-12 isn't available on Travis yet.
   # oraclejdk7: Not supported anymore: https://github.com/travis-ci/travis-ci/issues/7884#issuecomment-308451879
 
 deploy:
