--- a/.travis.yml
+++ b/.travis.yml
@@ -73,8 +73,10 @@ script:
   - ant
 
 jdk:
+  - oraclejdk10
   - oraclejdk9
   - oraclejdk8
+  - openjdk10
   - openjdk9
   - openjdk8
   - openjdk7
