Travis CI: Add Java 11, was released yesterday
https://en.wikipedia.org/w/index.php?title=Java_version_history&oldid=861197405#Java_SE_11

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,9 +85,11 @@ script:
   - ant
 
 jdk:
+  - oraclejdk11
   - oraclejdk10
   - oraclejdk9
   - oraclejdk8
+  - openjdk11
   - openjdk10
   - openjdk9
   - openjdk8
