--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 	compile fileTree(dir: '../fred/build/output/', include: '*.jar')
 	
 	testCompile files('/usr/share/java/junit4.jar')
-	testCompile files('/usr/share/java/hamcrest-core.jar'
+	testCompile files('/usr/share/java/hamcrest-core.jar')
 }
 
 def version_file = 'plugins/WebOfTrust/Version'
@@ -105,7 +105,7 @@ test (dependsOn: 'testJar') {
     workingDir = sourceSets.test.output.classesDir
     scanForTestClasses = false
     systemProperties += [
-        "is_WOT_unit_test": "true"
+        "is_WOT_unit_test": "true",
         "WOT_test_jar": "FIXME"
     ]
 }
