Gradle: Fix to actually run tasks

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ println 'This script merely exists to speed up Travis CI builds! Use Ant for pro
 println 'This notably is because I did NOT read any Gradle tutorial whatsoever yet and thus cannot guarantee its safety!'
 
 apply plugin: 'java'
+defaultTasks 'jar', 'test'
 
 sourceSets.main.java.srcDirs = ['src/']
 sourceSets.test.java.srcDirs = ['test/']
