Gradle: Fix disclaimer to be more prominent

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-println 'This script merely exists to speed up Travis CI builds! Use Ant for producing official JARs!'
+println 'WARNING: This script merely exists to speed up Travis CI builds! Use Ant for producing official JARs!'
 println 'This notably is because I did NOT read any Gradle tutorial whatsoever yet and thus cannot guarantee its safety!'
 
 apply plugin: 'java'
