Gradle: Fix typo

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ compileJava {
 compileJava << {
 	copy {
 		from "${buildDir}/java/version/${version_file}.class"
-		into "${buildDir}/classes/java/main/{$version_file}.class"
+		into "${buildDir}/classes/java/main/${version_file}.class"
 		duplicatesStrategy = 'overwrite'
 	}
 }
