Gradle: Fix destination of Version.class copying
Would wrongly consider the filename as the name of a directory.

--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,9 @@ compileJava {
 
 compileJava << {
 	copy {
-		from "${buildDir}/java/version/${version_file}.class"
-		into "${buildDir}/classes/java/main/${version_file}.class"
+		from "${buildDir}/java/version/"
+		include "${version_file}.class"
+		into "${buildDir}/classes/java/main/"
 		duplicatesStrategy = 'overwrite'
 	}
 }
