Gradle: Fix to not miss Version.class with "gradle clean jar"
Would previously not compile Version.class with "gradle clean jar".

The fix is to copy the Version.java before compiling it in a separate
task to the compile task.
If it was copied in the compileVersionTask, "gradle clean jar" would
wrongly assume the compileVersionTask is up to date and not run it.

The underlying reason may be that Gradle will assume a task to be up to
date if it has no input - and the input of the compileVersionTask would
be produced within it if this copying happened there, so the input
wouldn't exist before the task runs.

--- a/build.gradle
+++ b/build.gradle
@@ -31,18 +31,20 @@ task compileDb4o(type: Exec) {
 }
 
 def version_file = 'plugins/WebOfTrust/Version'
-task compileVersion (type: JavaCompile) {
-    def version_src = "${version_file}.java"
-    def version_buildir = "$projectDir/build/tmp/compileVersion/"
-    copy {
-        from sourceSets.main.java.srcDirs
-        into "${version_buildir}"
-        include "${version_src}"
-        filter {
-            String line -> line.replaceAll("@custom@",
-                 "git describe --always --abbrev=4 --dirty".execute().text.trim())
-        }
+def version_src = "${version_file}.java"
+def version_buildir = "$projectDir/build/tmp/compileVersion/"
+
+task prepareVersion(type: Copy) {
+    from sourceSets.main.java.srcDirs
+    into "${version_buildir}"
+    include "${version_src}"
+    filter {
+        String line -> line.replaceAll("@custom@",
+            "git describe --always --abbrev=4 --dirty".execute().text.trim())
     }
+}
+
+task compileVersion(type: JavaCompile, dependsOn: 'prepareVersion') {
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
     source = "${version_buildir}"
