Gradle: Shorten length of path where we put Version.class
Given that the build directory layout seems to be different among
different Gradle versions (see the previous commit) lets just use a
short path here.

--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ task compileVersion(type: JavaCompile, dependsOn: 'prepareVersion') {
     source = "${version_buildir}"
     include "${version_src}"
     classpath = files(sourceSets.main.compileClasspath, sourceSets.main.output.classesDir)
-    destinationDir = file("${buildDir}/java/version/")
+    destinationDir = file("${buildDir}/version/")
 }
 
 compileJava {
@@ -59,7 +59,7 @@ compileJava {
 
 compileJava << {
 	copy {
-		from "${buildDir}/java/version/"
+		from "${buildDir}/version/"
 		include "${version_file}.class"
 		into sourceSets.main.output.classesDir
 		duplicatesStrategy = 'overwrite'
