--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ defaultTasks 'jar', 'test'
 sourceSets.main.java.srcDirs = ['src/']
 sourceSets.test.java.srcDirs = ['test/']
 
+configurations {
+	junit
+}
+
 dependencies {
 	// WARNING: The way we declare dependencies here is NOT how Gradle is intended to be used!
 	// I made it use them from the local filesystem, but they should be downloaded by Gradle
@@ -21,8 +25,10 @@ dependencies {
 	compile fileTree(dir: '../fred/build/output/', include: '*.jar')
 	compile files('db4o-7.4/db4o.jar')
 	
-	testCompile files('/usr/share/java/junit4.jar')
-	testCompile files('/usr/share/java/hamcrest-core.jar')
+	junit files('/usr/share/java/junit4.jar')
+	junit files('/usr/share/java/hamcrest-core.jar')
+	
+	testCompile configurations.junit
 }
 
 task compileDb4o(type: Exec) {
@@ -99,10 +105,11 @@ task("$jarType", type: Jar, overwrite: true, dependsOn: ['compileJava', 'compile
 test {
     dependsOn 'testJar'
     def testJarFile = "${project.libsDir}/WebOfTrust-with-unit-tests.jar"
-
     classpath = fileTree(dir: '../fred/build/output/', include: '*.jar')
     classpath+= project.files(testJarFile)
-    
+    classpath+= configurations.junit
+    println 'Classpath for test runner:'
+    classpath.each { file -> println ' ' + file }
     
     scanForTestClasses = false
     include '**/*Test*.class'
