--- a/.travis.yml
+++ b/.travis.yml
@@ -84,9 +84,14 @@ before_script: |
 script:
   - set -o errexit
   - echo 'Checksums of dependencies:' ; sha256sum ../fred/build/output/*
-  # Don't allow Travis to override the low memory limit we set in Ant with a higher one.
+  # Don't allow Travis to override the low memory limit which our builder sets with a higher one.
   - unset _JAVA_OPTIONS
-  - ant
+  # Use Gradle to run the unit tests as it supports using multiple CPU cores...
+  - gradle clean test
+  # ... and Ant to produce the actual JAR as my Gradle script is still experimental.
+  # FIXME: Test whether Gradle's JAR is binary identical so we can consider it as stable.
+  - gradle clean
+  - ant -Dtest.skip=true
   # To test the Ant and Gradle builders against each other uncomment the following.
   ## Use the same Gradle as fred to re-use the fixes we applied to it above
   ## - ln -s "$TRAVIS_BUILD_DIR/../fred/gradlew"
