--- a/.travis.yml
+++ b/.travis.yml
@@ -82,6 +82,7 @@ before_script: |
 
 # Compile and test WoT
 script:
+  - set -o errexit
   - echo 'Checksums of dependencies:' ; sha256sum ../fred/build/output/*
   # Don't allow Travis to override the low memory limit which our builder sets with a higher one.
   - unset _JAVA_OPTIONS
