--- a/build.gradle
+++ b/build.gradle
@@ -63,14 +63,12 @@ compileJava {
 	dependsOn 'compileDb4o', 'compileVersion'
 	sourceCompatibility = 1.7
 	targetCompatibility = 1.7
-}
 
-compileJava << {
-	copy {
+	doLast { copy {
 		from "${buildDir}/version/"
 		include "${version_file}.class"
 		into sourceSets.main.output.classesDir
-	}
+	}}
 }
 
 ["jar", "testJar"].each { jarType ->
