Gradle: Attempt to fix to actually run tests concurrently
While the previous code would start many Java VMs at the beginning their
number went down after a while, probably because there can be no
parallel worker threads if org.gradle.parallel is not set.

--- a/build.gradle
+++ b/build.gradle
@@ -138,6 +138,7 @@ test {
 
     maxHeapSize = "512m"
     maxParallelForks = Runtime.runtime.availableProcessors()
+    doFirst { println 'Max test threads (can be limited by worker count): ' + maxParallelForks }
     // Don't run multiple tests in the same VM: WoT, db4o and Freenet are to complex to be able to
     // tell whether this is safe. Also this is likely needed for maxParallelForks to actually work.
     forkEvery = 1
