Gradle: Reduce LOC

--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,8 @@ configurations {
 }
 
 dependencies {
-	// WARNING: The way we declare dependencies here is NOT how Gradle is intended to be used!
-	// I made it use them from the local filesystem, but they should be downloaded by Gradle
-	// instead.
-	// I've done so because I currently do not have the time to maintain a gradle-witness list of
-	// hashes of trustworthy binaries. So for now I'm rather outsourcing determination of what
-	// binaries are safe to fred and OS maintainers as they're dealing with that already anyway.
-	// TODO: Code quality: Figure out whether it is possible to inherit their gradle-witness
-	// decisions automatically.
+	// TODO: Code quality: Use Gradle's native dependency management + gradle-witness instead of flat files
+	// Postponing this until I know how to import fred's dependency list to avoid duplicating it.
 	
 	// Run fred's Gradle with "./gradlew jar copyRuntimeLibs" to produce this directory
 	compile fileTree(dir: '../fred/build/output/', include: '*.jar')
