--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'java'
 defaultTasks 'jar', 'test'
 sourceSets.main.java.srcDirs = ['src/']
 sourceSets.test.java.srcDirs = ['test/']
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 7
+targetCompatibility = 7
 
 configurations { junit }
 dependencies {
@@ -23,7 +23,9 @@ dependencies {
 }
 
 task compileDb4o(type: Exec) {
-	workingDir 'db4o-7.4' ; commandLine 'ant'
+	workingDir 'db4o-7.4'
+	commandLine 'ant', "-Djavac.source.version=" + sourceCompatibility,
+	                   "-Djavac.target.version=" + targetCompatibility
 }
 
 def version_file = 'plugins/WebOfTrust/Version'
